# 3ds_offset

./: CMakeLists.txt  offset_mesh.cpp
